--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdk minApi
         targetSdk targetApi
         versionCode 17
-        versionName "v2.9.1j"
+        versionName "v2.9.1k"
 	    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
@@ -34,7 +34,7 @@ android {
         abi {
             enable true
             reset()
-            include 'x86_64', 'arm64-v8a'
+            include 'x86', 'x86_64', 'arm64-v8a', 'armeabi-v7a'
             universalApk true
         }
     }
