--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdk minApi
         targetSdk targetApi
         versionCode 17
-        versionName "v2.9.1p"
+        versionName "v2.9.1q"
 	    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
@@ -86,6 +86,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.commons/commons-compress
     implementation 'org.apache.commons:commons-compress:1.25.0'
     implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.9'
+    //implementation 'androidx.activity:activity:1.8.0'
+    //implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     //test
     testImplementation 'junit:junit:4.13.2'
