--- a/web/data/UpdateConfig.json
+++ b/web/data/UpdateConfig.json
@@ -1,6 +1,6 @@
 {
     "versionCode":"17",
-    "versionName":"v2.9.1t",
+    "versionName":"v2.9.1u",
     "size": "30 MB",
     "url": "https://github.com/AnBui2004/Vectras-VM-Android/releases",
     "Message": "Bugs fixed.",
